--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -46,6 +46,9 @@ jobs:
         working-directory: dockerize
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 20
 
       - name: Run docker-compose build
         run: docker-compose build
@@ -68,3 +71,27 @@ jobs:
         with:
           fail_ci_if_error: true
           token: ${{ secrets.CODECOV_TOKEN }}
+
+      - name: Create superuser
+        working-directory: dockerize
+        run: |
+          cat << EOF | docker-compose exec -T devweb bash
+          export DJANGO_SUPERUSER_PASSWORD=admin
+          python manage.py createsuperuser --no-input --username admin --email 'admin@example.com'
+          EOF
+
+      - name: Install playwright dependencies
+        working-directory: playwright/ci-test
+        run: |
+          npm install
+          npm ci
+          npx playwright install --with-deps
+      - name: Run Playwright tests
+        working-directory: playwright/ci-test
+        run: npx playwright test
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright/ci-test/playwright-report/
+          retention-days: 30
