--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -70,7 +70,7 @@ jobs:
         working-directory: dockerize
         run: |
           cat << EOF | docker-compose exec -T devweb bash
-          python manage.py makemigrations --merge
+          python manage.py makemigrations --merge --noinput
           python manage.py migrate
           export DJANGO_SUPERUSER_PASSWORD=admin
           python manage.py createsuperuser --no-input --username admin --email 'admin@example.com'
