--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -66,6 +66,14 @@ jobs:
           coverage xml
           EOF
 
+      - name: Test django endpoint
+        run: |
+          curl http://0.0.0.0:62202
+          if [ $? -ne 0 ]; then
+            echo "Curl command failed"
+            exit 1
+          fi
+
       - name: Create superuser
         working-directory: dockerize
         run: |
