--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -68,6 +68,7 @@ jobs:
 
       - name: Test django endpoint
         run: |
+          sleep 120
           curl http://0.0.0.0:62202
           if [ $? -ne 0 ]; then
             echo "Curl command failed"
