--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -56,23 +56,23 @@ jobs:
       - name: Run the containers
         run: docker-compose up -d db devweb
 
-      - name: Start django server
-        run: docker ps
-
       - name: Run Coverage test
         run: |
           cat << EOF | docker-compose exec -T devweb bash
           pip install coverage
-          python manage.py makemigrations
+          python manage.py makemigrations --merge --noinput
           python manage.py migrate
           coverage run manage.py test
           coverage xml
           EOF
 
+      - name: Start django server
+        run: docker-compose exec -T devweb bash -c "python manage.py runserver 0.0.0.0:8080"
+
       - name: Test django endpoint
         run: |
           sleep 120
-          curl http://0.0.0.0:62203
+          curl http://0.0.0.0:62202
           if [ $? -ne 0 ]; then
             echo "Curl command failed"
             exit 1
@@ -82,8 +82,6 @@ jobs:
         working-directory: dockerize
         run: |
           cat << EOF | docker-compose exec -T devweb bash
-          python manage.py makemigrations --merge --noinput
-          python manage.py migrate
           export DJANGO_SUPERUSER_PASSWORD=admin
           python manage.py createsuperuser --no-input --username admin --email 'admin@example.com'
           EOF
