--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -66,16 +66,14 @@ jobs:
           coverage xml
           EOF
 
-      - name: Stop containers and the spin them up
+      - name: Start Django server
         run: |
-          docker-compose down
-          sleep 60
-          docker-compose up -d db devweb
+          docker-compose exec -T devweb bash -c "nohup python manage.py runserver 0.0.0.0:8080 &"
+          sleep 10
 
       - name: Test django endpoint
         run: |
-          sleep 60
-          curl -v http://localhost:62202
+          curl -v http://0.0.0.0:62202
           if [ $? -ne 0 ]; then
             echo "Curl command failed"
             exit 1
