--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -70,6 +70,7 @@ jobs:
         run: |
           docker-compose exec -T devweb bash -c "nohup python manage.py runserver 0.0.0.0:8080 &"
           sleep 10
+          docker-compose exec -T devweb bash -c "python manage.py loaddata fixtures/*.json"
 
       - name: Test django endpoint
         run: |
