--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -61,6 +61,7 @@ jobs:
           cat << EOF | docker-compose exec -T devweb bash
           pip install coverage
           python manage.py makemigrations --merge --noinput
+          python manage.py makemigrations feedjack
           python manage.py migrate
           coverage run manage.py test
           coverage xml
